samples/_failures_safe/1761477122_045821_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf837c64.c: In function ‘main’:
./samples/SAFE/__tmp_bf837c64.c:150:9: error: expected declaration or statement at end of input
  150 |         }
      |         ^
./samples/SAFE/__tmp_bf837c64.c:150:9: error: expected declaration or statement at end of input
